--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@400;700&display=swap" rel="stylesheet">
-  <title>Olaniyi Fashola Portfolio</title>
+  <title>React App</title>
 </head>
 
 <body>
